--- a/app.json
+++ b/app.json
@@ -1,14 +1,12 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/home/home"
+    "pages/test/test"
   ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "Weixin",
     "navigationBarTextStyle": "black"
-  },
-  "style": "v2",
-  "sitemapLocation": "sitemap.json"
+  }
 }
